--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pinata-client",
-  "version": "1.0.8",
+  "version": "1.0.12",
   "description": "Official SDK for the Pinata IPFS platform",
   "main": "lib/pinata-client.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "instrument": false
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "is-ipfs": "^0.6.0"
   }
 }
