--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pinata/sdk",
-  "version": "1.0.18",
+  "version": "1.1.0",
   "description": "Official SDK for the Pinata IPFS platform",
   "main": "lib/pinata-sdk.js",
   "scripts": {
@@ -57,7 +57,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "base-path-converter": "^1.0.1",
     "form-data": "^2.3.3",
-    "is-ipfs": "^0.6.0"
+    "is-ipfs": "^0.6.0",
+    "recursive-fs": "^1.1.2"
   }
 }
