--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
 {
-  "presets": ["env"],
+  "presets": ["@babel/env"],
   "plugins": ["babel-plugin-add-module-exports"],
-  "env": {
-    "test": {
-      "plugins": [
-        ["istanbul"]
-      ]
-    }
-  }
 }
