--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
@@ -57,6 +57,16 @@
     "form-data": "^2.3.3",
     "is-ipfs": "^0.6.0",
     "recursive-fs": "^1.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint --cache --fix"
+    ]
   },
   "jest": {
     "collectCoverage": true,
