--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pinata/sdk",
-  "version": "1.1.6-beta.0",
+  "version": "1.1.7",
   "description": "Official SDK for the Pinata IPFS platform",
   "main": "lib/pinata-sdk.js",
   "scripts": {
