--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# todo tsc is building to dist at the moment, so this will need to be changed to your build folder, however I'm not quite sure how to minify the declarations just yet..
+dist
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
