--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.8.3",
+    "@types/node": "^15.6.1",
     "acorn": "^7.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
