--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
     "@babel/register": "^7.8.3",
     "@types/node": "^15.6.1",
     "acorn": "^7.1.0",
