--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "lib/pinata-sdk.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "build": "webpack --env dev && webpack --env build && npm run test && tsc",
+    "prepare": "husky install",
+    "build": "npm run build-dev && npm run build-prod && npm run test && tsc",
+    "build-dev": "webpack --env dev",
+    "build-prod": "webpack --env build",
     "coverage": "jest --coverage",
     "dev": "webpack --progress --colors --watch --env dev",
     "html": "open coverage/index.html",
     "lint": "eslint src --quiet ",
-    "lint:fix": "eslint src --fix",
+    "lint:fix": "eslint src test *.js --fix",
     "test": "./node_modules/.bin/jest --env=node",
     "repl": "node -i -e \"$(< ./lib/pinata-sdk.js)\""
   },
@@ -47,12 +50,12 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "husky": "^8.0.0",
     "jest": "^25.1.0",
     "typescript": "^4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "yargs": "^10.0.3"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "axios": "^0.21.1",
