changed js to ts

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [["@babel/env", { "modules": "commonjs" , "useBuiltIns": "usage"}]  ],
+  "presets": ["@babel/preset-typescript", ["@babel/env", { "modules": "commonjs" , "useBuiltIns": "usage"}]  ],
   "plugins": ["add-module-exports", "@babel/plugin-transform-runtime"]
 }
 
