--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "include": [
-    "src/**/*.js"
-  ],
+    "src/**/*.ts",   "src/**/*.js"],
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true,
+    "sourceMap": true,
     "allowJs": true,
     "outDir": "types",
     "target": "es5",
