--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
         "@babel/register": "^7.8.3",
+        "@types/jest": "^29.2.0",
         "@types/node": "^15.6.1",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
