--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "base-path-converter": "^1.0.2",
         "form-data": "^2.3.3",
         "is-ipfs": "^0.6.0",
-        "recursive-fs": "^1.1.2"
+        "path": "^0.12.7"
     },
     "jest": {
         "collectCoverage": true,
