--- a/package.json
+++ b/package.json
@@ -36,15 +36,21 @@
         "url": "https://github.com/PinataCloud/Pinata-SDK/issues"
     },
     "homepage": "https://github.com/PinataCloud/Pinata-SDK",
+    "resolutions": {
+        "acorn": "npm:acorn-with-stage3"
+    },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.4",
         "@babel/plugin-transform-runtime": "^7.19.1",
         "@babel/preset-env": "^7.19.4",
+        "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@babel/register": "^7.8.3",
         "@types/jest": "^29.2.0",
         "@types/node": "^15.6.1",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
         "acorn": "^7.1.0",
@@ -52,6 +58,7 @@
         "babel-loader": "^8.0.6",
         "babel-plugin-add-module-exports": "^1.0.2",
         "babel-polyfill": "^6.26.0",
+        "compression-webpack-plugin": "^10.0.0",
         "eslint": "^8.26.0",
         "eslint-loader": "^3.0.3",
         "husky": "^8.0.0",
@@ -59,14 +66,20 @@
         "source-map-loader": "^4.0.1",
         "typescript": "^4.8.4",
         "uglifyjs-webpack-plugin": "^2.2.0",
-        "webpack": "^4.41.6",
+        "webpack": "^4.46.0",
+        "webpack-bundle-analyzer": "^4.7.0",
         "webpack-cli": "^3.3.11"
     },
     "dependencies": {
         "axios": "^0.21.1",
         "form-data": "^2.3.3",
         "is-ipfs": "^0.6.0",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "process": "^0.11.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-player": "^2.11.0",
+        "wagmi": "^0.9.6"
     },
     "jest": {
         "collectCoverage": true,
