--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "allowJs": true,
     "outDir": "types",
-    "target": "es5",
+    "target": "ES2018",
     "module": "commonjs",
     "lib": ["es2017", "es7", "es6", "dom"],
     "strict": true,
