--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "types/index.d.ts",
     "scripts": {
         "prepare": "husky install",
-        "build": "npm run build-dev && npm run build-prod && npm run test",
+        "build": "npm run build-prod && npm run test",
         "build-dev": "webpack --env dev",
         "build-prod": "webpack --env build",
         "coverage": "jest --coverage",
@@ -68,7 +68,11 @@
         "webpack-cli": "^5.0.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.4",
         "axios": "^0.21.1",
+        "buffer": "^6.0.3",
         "ethers": "^5.7.2",
         "form-data": "^2.3.3",
         "is-ipfs": "^0.6.0",
@@ -77,7 +81,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-player": "^2.11.0",
-        "wagmi": "^0.10.7"
+        "wagmi": "^0.6.8"
     },
     "jest": {
         "collectCoverage": true,
