--- a/packages/pinata-sdk/package.json
+++ b/packages/pinata-sdk/package.json
@@ -2,7 +2,7 @@
     "name": "@pinata/sdk",
     "version": "2.1.0",
     "description": "Official SDK for the Pinata IPFS platform",
-    "main": "lib/pinata-sdk.js",
+    "main": "lib/pinata-sdk.min.js",
     "types": "types/index.d.ts",
     "scripts": {
         "build": "npm run build-prod",
