--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup src/index.ts",
+    "test": "jest --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   },
   "homepage": "https://github.com/PinataCloud/Pinata-SDK",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
@@ -38,6 +40,8 @@
   },
   "dependencies": {
     "is-ipfs": "^8.0.4",
-    "node-fetch": "^3.3.1"
+    "jest": "^29.7.0",
+    "node-fetch": "^3.3.1",
+    "ts-jest": "^29.2.2"
   }
 }
